@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-Plugin-VerifyPhases
 
 {{$NEXT}}
+          - debug logging is added at the end of each phase, to provide useful
+            diagnostics in 'dzil build --verbose' when trying to figure out
+            what the plugins are doing.
 
 0.015     2017-04-27 15:58:47Z
           - remove tracking of _share_dir_map -- it can be legitimately read
